@@ -36,6 +36,7 @@ _cache_count_timeout = config.getint(
     'cache', 'count_timeout', default=60 * 60 * 24)
 _cache_count_clear = config.getint(
     'cache', 'count_clear', default=1000)
+_database_timeout = 120
 
 
 class AccessError(UserError):
@@ -132,10 +133,13 @@ class ModelStorage(Model):
                     'delete': RPC(readonly=False, instantiate=0),
                     'copy': RPC(readonly=False, instantiate=0, unique=False,
                         result=lambda r: list(map(int, r))),
-                    'search': RPC(result=lambda r: list(map(int, r))),
-                    'search_count': RPC(),
+                    'search': RPC(
+                        result=lambda r: list(map(int, r)),
+                        timeout=_database_timeout),
+                    'search_count': RPC(timeout=_database_timeout),
                     'search_read': RPC(),
-                    'resources': RPC(instantiate=0, unique=False),
+                    'resources': RPC(instantiate=0, unique=False,
+                        timeout=_database_timeout),
                     'export_data_domain': RPC(),
                     'export_data': RPC(instantiate=0, unique=False),
                     'import_data': RPC(readonly=False),
