@@ -1,3 +1,4 @@
+* Add database timeout parameter on RPC calls
 * Support limit and offset to ModelSQL count search and search_count
 * Add estimation count to ModelStorage
 * Deduplicate entries in domain inversion's simplify
